# goodvibes

./: .gitignore  .gitmodules  .shippable.yml  AUTHORS.in  HACKING.md  Makefile.am  NEWS  README.md  THANKS.md  autogen.sh  configure.ac
cli/: Makefile.am  main.c
data/: Makefile.am  com.elboulangero.Goodvibes.service.in  com.elboulangero.Goodvibes.service.in.in
data/dbus-1/: Makefile.am
data/dbus-1/services/: Makefile.am  org.Goodvibes.service.in  org.Overcooked.service.in
data/desktop/: Makefile.am  com.elboulangero.Goodvibes.desktop.in.in  overcooked.desktop.in
data/glib-2.0/: Makefile.am
data/glib-2.0/schemas/: Makefile.am  com.elboulangero.Goodvibes.gschema.xml.in
data/icons/: Makefile.am
data/icons/hicolor/: Makefile.am
data/icons/hicolor/16x16/apps/: Makefile.am
data/icons/hicolor/22x22/apps/: Makefile.am
data/icons/hicolor/24x24/apps/: Makefile.am
data/icons/hicolor/256x256/apps/: Makefile.am
data/icons/hicolor/32x32/apps/: Makefile.am
data/icons/hicolor/48x48/apps/: Makefile.am
data/icons/src/: Makefile.am
data/ui/: Makefile.am  app-menu.glade  main-window.glade  menubar.glade  prefs-window.glade  station-dialog.glade
docs/: autotools.md  coding-style.md  design-choices.md  design-overview.md  gobject.md  howto.md  ui.md  wisdom.md
extra/: README.md
libcaphe/: Makefile.am  README.md
libcaphe/caphe/: Makefile.am  caphe-dbus-inhibitor.c  caphe-dbus-inhibitor.h  caphe-dbus-invokator.c  caphe-dbus-invokator.h  caphe-dbus-proxy.c  caphe-dbus-proxy.h  caphe-inhibitor.c  caphe-inhibitor.h  caphe-login-dbus-invokator.c  caphe-login-dbus-invokator.h  caphe-main.c  caphe-main.h  caphe-power-dbus-invokator.c  caphe-power-dbus-invokator.h  caphe-session-dbus-invokator.c  caphe-session-dbus-invokator.h  caphe-trace.h  caphe.c  caphe.h
libcaphe/tests/: Makefile.am  main.c
libgszn/: Makefile.am  README.md  gszn-backend-keyfile.c  gszn-backend-keyfile.h  gszn-backend-xml.c  gszn-backend-xml.h  gszn-backend.c  gszn-backend.h  gszn-debug.h  gszn-deserializer.c  gszn-deserializer.h  gszn-error.c  gszn-error.h  gszn-param-specs.h  gszn-serializer.c  gszn-serializer.h  gszn-settings.c  gszn-settings.h  gszn-shared.c  gszn-shared.h  gszn.c  gszn.h
m4/: gv-add-global-var.m4  gv-feature.m4  ock-add-global-var.m4  ock-feature.m4
po/: LINGUAS  Makevars  POTFILES.in  cs.po  fr.po  goodvibes.pot  nl.po
scripts/: extra.sh  package.sh
scripts/code/: copyright.sh  gv-object-make.sh  header-namespace.sh  indent.sh  lib-git.sh  ock-object-make.sh
scripts/code/gv-object-templates/: gv-dummy.c  gv-dummy.h  gv-feature-dummy.c  gv-feature-dummy.h
scripts/code/ock-object-templates/: ock-dummy.c  ock-dummy.h  ock-feature-dummy.c  ock-feature-dummy.h
scripts/test/: hotkey.sh  mpris2.sh
src/: Makefile.am  client.c  gv-console-application.c  gv-console-application.h  gv-graphical-application.c  gv-graphical-application.h  main.c  options.c  options.h
src/additions/: glib-object.c  glib-object.h  glib.c  glib.h  gst.c  gst.h  gtk.c  gtk.h
src/core/: gv-conf.c  gv-conf.h  gv-core-internal.h  gv-core.c  gv-core.h  gv-engine.c  gv-engine.h  gv-metadata.c  gv-metadata.h  gv-player.c  gv-player.h  gv-playlist.c  gv-playlist.h  gv-station-list.c  gv-station-list.h  gv-station.c  gv-station.h  ock-conf.c  ock-conf.h  ock-core.c  ock-core.h  ock-engine.c  ock-engine.h  ock-metadata.c  ock-metadata.h  ock-player.c  ock-player.h  ock-playlist.c  ock-playlist.h  ock-station-list.c  ock-station-list.h  ock-station.c  ock-station.h
src/core/feat/: gv-console-output.c  gv-console-output.h  gv-dbus-server-mpris2.c  gv-dbus-server-mpris2.h  gv-dbus-server-native.c  gv-dbus-server-native.h  gv-dbus-server.c  gv-dbus-server.h  gv-inhibitor.c  gv-inhibitor.h  ock-console-output.c  ock-console-output.h  ock-dbus-server-mpris2.c  ock-dbus-server-mpris2.h  ock-dbus-server-native.c  ock-dbus-server-native.h  ock-dbus-server.c  ock-dbus-server.h  ock-inhibitor.c  ock-inhibitor.h
src/feat/: gv-console-output.c  gv-console-output.h  gv-dbus-server-mpris2.c  gv-dbus-server-mpris2.h  gv-dbus-server-native.c  gv-dbus-server-native.h  gv-dbus-server.c  gv-dbus-server.h  gv-feat.c  gv-feat.h  gv-hotkeys.c  gv-hotkeys.h  gv-inhibitor.c  gv-inhibitor.h  gv-notifications.c  gv-notifications.h
src/framework/: gv-errorable.c  gv-errorable.h  gv-feature.c  gv-feature.h  gv-file-helpers.c  gv-file-helpers.h  gv-framework.c  gv-framework.h  gv-list.c  gv-list.h  gv-param-specs.h  log.c  log.h  ock-errorable.c  ock-errorable.h  ock-feature.c  ock-feature.h  ock-file-helpers.c  ock-file-helpers.h  ock-framework.c  ock-framework.h  ock-list.c  ock-list.h  ock-param-specs.h  uri-schemes.c  uri-schemes.h  vt-codes.h
src/libgszn/: README.md  gszn-backend-keyfile.c  gszn-backend-keyfile.h  gszn-backend-xml.c  gszn-backend-xml.h  gszn-backend.c  gszn-backend.h  gszn-deserializer.c  gszn-deserializer.h  gszn-error.c  gszn-error.h  gszn-param-specs.h  gszn-serializer.c  gszn-serializer.h  gszn-settings.c  gszn-settings.h  gszn-shared.c  gszn-shared.h  gszn.c  gszn.h
src/ui/: global.h  gv-about-dialog.c  gv-about-dialog.h  gv-builder-helpers.c  gv-builder-helpers.h  gv-main-menu.c  gv-main-menu.h  gv-main-window.c  gv-main-window.h  gv-prefs-window.c  gv-prefs-window.h  gv-station-context-menu.c  gv-station-context-menu.h  gv-station-dialog.c  gv-station-dialog.h  gv-stations-tree-view.c  gv-stations-tree-view.h  gv-status-icon.c  gv-status-icon.h  gv-stock-icons.c  gv-stock-icons.h  gv-tray.c  gv-tray.h  gv-ui-helpers.c  gv-ui-helpers.h  gv-ui-internal.h  gv-ui.c  gv-ui.h  ock-about-dialog.c  ock-about-dialog.h  ock-builder-helpers.c  ock-builder-helpers.h  ock-error-handler.c  ock-error-handler.h  ock-main-menu.c  ock-main-menu.h  ock-main-window.c  ock-main-window.h  ock-prefs-window.c  ock-prefs-window.h  (+12 more)
src/ui/feat/: gv-hotkeys.c  gv-hotkeys.h  gv-notifications.c  gv-notifications.h  ock-hotkeys.c  ock-hotkeys.h  ock-notifications.c  ock-notifications.h
